A few OCD inducing things fixed, I dont have OCD btw, I could just leave them alone, but I am currently in a cramped car going from Belgium to Lithuania, I dont want to do anything to complicated and also this is a pretty loooooooooooooooooooooooong commmmmmmmmmmmmmmmmmmmit mmmmmmmmmmmmmmeeeeeeeeeeessssssssssssssssaaaaaaaaaaaggggggggggeeeeeeee!!!

--- a/website/static/css/base.css
+++ b/website/static/css/base.css
@@ -6,9 +6,26 @@ body {
     color: #fff;
 }
 
-.container {
-    margin: 10px;
+.card-header {
     align-content: center;
+    text-align: center;
+}
+
+.navbar-brand {
+    font-weight: bolder;
+    font-size: 26px;
+}
+
+#feedback-text {
+    display: inline;
+    font-size: large;
+    vertical-align: sub;
+    padding: 0;
+}
+
+.container {
+    margin: 10px !important;
+    align-content: center !important;
     max-width: 100% !important;
 }
 
@@ -109,3 +126,4 @@ body {
     cursor: pointer;
     color: #fff;
 }
+
