--- a/website/static/css/home.css
+++ b/website/static/css/home.css
@@ -1,5 +1,13 @@
-h5 {
+h5, .card-header {
     font-weight: bold;
+}
+
+.card-header {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    font-size: 24px;
 }
 
 .card, .card-body {
@@ -9,5 +17,6 @@ h5 {
 
 .card {
     display: inline-block;
-    margin-right: 20px;
+    margin: 10px;
+    vertical-align: center;
 }
